<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/Theme.AppCompat.Light.DarkActionBar"
    tools:context="com.example.asus.abaha42.DetailActivity"
    android:label="@string/app_name"
    >

    <ImageView
        android:id="@+id/imageDetail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <TextView
        android:layout_marginLeft="16dp"
        android:id="@+id/textViewHeadDet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/heading"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_marginLeft="16dp"
        android:id="@+id/textViewPriceDet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/price" />


    <TextView
        android:layout_marginLeft="16dp"
        android:id="@+id/textViewDescDet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/description" />

    <TextView
        android:layout_marginLeft="16dp"
        android:id="@+id/textViewDateDet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/date" />
    <TextView
        android:layout_marginLeft="16dp"
        android:id="@+id/textViewTownDet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/town" />

</LinearLayout>
